--- a/NAVV.Rmd
+++ b/NAVV.Rmd
@@ -60,7 +60,7 @@ Os assuntos selecionados foram os seguintes:
 
 Refere-se ao número de autos com 1 (um) ou mais movimentos finalísticos (nos moldes do painel "Área-fim" https://gestao.mpes.mp.br) registrados nas comarcas do estado do Espírito Santo durante o período de janeiro a maio de 2023, categorizado por comarca e assunto.
 
-```{r consulta, include=FALSE}
+```{r consulta, results='asis', echo=FALSE}
 
 resultados <- read.csv('data/NAVV_pivot.csv')
 
@@ -74,42 +74,22 @@ head(resultados)
 
 ```{r tabela, results='asis', echo=FALSE}
 
+# Create a list of data frames (replace this with your actual data)
+data_frames_list <- list(
+  data.frame(ID = 1:3, Value = c(10, 20, 30)),
+  data.frame(ID = 4:6, Value = c(40, 50, 60)),
+  data.frame(ID = 7:9, Value = c(70, 80, 90))
+)
 
-#library(htmltools)
-
-#NAVV <- read_excel("data/NAVV.xlsx")
-#df<-NAVV
-
-df<- resultados
-
-categorias <- unique(df$Orgao)
-
-
-# Lista para armazenar as tabelas flexíveis
-ft_list <- list()
-
-
-# Loop para cada categoria
-for (categoria in categorias) {
-  # Filtrando o dataframe para a categoria atual e selecionando apenas as colunas desejadas
-  df_filtrado <- df %>%
-    filter(Orgao == categoria) %>%
-    select(Assunto_Gampes, Janeiro, Fevereiro, Março, Abril, Maio, Junho, Julho, Agosto, Setembro, Outubro, Novembro, Dezembro)
+# Iterate over each data frame in the list
+for (i in 1:length(data_frames_list)) {
+  current_table <- data_frames_list[[i]]
   
-  # Criando a tabela flexível
-  ft <- flextable(df_filtrado) %>% 
-    autofit()
+  # Perform operations on the current_table
   
-  # Convertendo a tabela flexível para markdown usando kable
-  table_markdown <- knitr::kable(df_filtrado, format = "markdown")
-  
-  # Imprimindo a tabela markdown
-  cat("**",categoria,"**\n", sep="")
-
-  print(table_markdown)
-  cat("\n")  # Pula uma linha entre as tabelas
+  # Print or display the summary table
+  print(current_table)
 }
-
 
 
 ```
