--- a/NAVV.Rmd
+++ b/NAVV.Rmd
@@ -56,16 +56,16 @@ Refere-se ao número de autos com 1 (um) ou mais movimentos finalísticos (nos m
 
 ```{r, include=FALSE}
 
-library(lubridate)
-
-# Obtenha a data atual
-data_atual <- Sys.Date()
-
-# Subtraia um mês
-mes_passado <- data_atual %m-% months(1)
-
-# Formate o mês passado em português do Brasil
-mes_passado_formatado <- format(mes_passado, format = "%B", locale = "pt_BR")
+# library(lubridate)
+# 
+# # Obtenha a data atual
+# data_atual <- Sys.Date()
+# 
+# # Subtraia um mês
+# mes_passado <- data_atual %m-% months(1)
+# 
+# # Formate o mês passado em português do Brasil
+# mes_passado_formatado <- format(mes_passado, format = "%B", locale = "pt_BR")
 
 ```
 
@@ -90,7 +90,7 @@ for (categoria in categorias) {
   # Filtrando o dataframe para a categoria atual e selecionando apenas as colunas desejadas
   df_filtrado <- df %>%
     filter(Orgão == categoria) %>%
-    select(Assunto.Gampes, Janeiro, mes_passado_formatado)
+    select(Assunto.Gampes, mes_passado_formatado)
   
   # Classificando as linhas por "Assunto_Gampes" em ordem alfabética
   df_filtrado <- df_filtrado %>%
