--- a/NAVV.Rmd
+++ b/NAVV.Rmd
@@ -15,7 +15,7 @@ latex_engine: xelatex
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 
 library(dplyr)
 library(flextable)
@@ -115,6 +115,3 @@ for (categoria in categorias) {
 ```
 
 
-## Análise gráfica
-
-Gráficos serão inseridos aqui
